{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 131,
  "lineage": "0a9074ce-4e54-0578-6a56-d8f3c281ed03",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "garage_flow_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0736f7dbaec040eb5",
            "arn": "arn:aws:ec2:us-east-2:107203103397:elastic-ip/eipalloc-0736f7dbaec040eb5",
            "association_id": "eipassoc-0a8cb71b9a810f00a",
            "domain": "vpc",
            "id": "eipalloc-0736f7dbaec040eb5",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0aad98896d103233b",
            "private_dns": "ip-10-0-1-142.us-east-2.compute.internal",
            "private_ip": "10.0.1.142",
            "public_dns": "ec2-3-149-84-50.us-east-2.compute.amazonaws.com",
            "public_ip": "3.149.84.50",
            "public_ipv4_pool": "amazon",
            "region": "us-east-2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "107203103397",
            "id": "eipalloc-0736f7dbaec040eb5",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_internet_gateway.garage_flow_igw",
            "aws_vpc.garage_flow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "garage_flow_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:107203103397:internet-gateway/igw-09357cc29738839b2",
            "id": "igw-09357cc29738839b2",
            "owner_id": "107203103397",
            "region": "us-east-2",
            "vpc_id": "vpc-062630791bd0dc2a2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "107203103397",
            "id": "igw-09357cc29738839b2",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.garage_flow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "garage_flow_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0736f7dbaec040eb5",
            "association_id": "eipassoc-0a8cb71b9a810f00a",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0a2809c1c8396997e",
            "network_interface_id": "eni-0aad98896d103233b",
            "private_ip": "10.0.1.142",
            "public_ip": "3.149.84.50",
            "region": "us-east-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01f61ae94d2406fa4",
            "tags": {
              "Name": "garage_flow_nat"
            },
            "tags_all": {
              "Name": "garage_flow_nat"
            },
            "vpc_id": "vpc-062630791bd0dc2a2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "107203103397",
            "id": "nat-0a2809c1c8396997e",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_eip.garage_flow_nat_eip",
            "aws_internet_gateway.garage_flow_igw",
            "aws_subnet.garage_flow_subnet_az_a",
            "aws_vpc.garage_flow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "garage_flow_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:107203103397:route-table/rtb-0c6f517d9c122508c",
            "id": "rtb-0c6f517d9c122508c",
            "owner_id": "107203103397",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a2809c1c8396997e",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-062630791bd0dc2a2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "107203103397",
            "id": "rtb-0c6f517d9c122508c",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_eip.garage_flow_nat_eip",
            "aws_internet_gateway.garage_flow_igw",
            "aws_nat_gateway.garage_flow_nat",
            "aws_subnet.garage_flow_subnet_az_a",
            "aws_vpc.garage_flow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "garage_flow_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:107203103397:route-table/rtb-0b02e1278710f93d3",
            "id": "rtb-0b02e1278710f93d3",
            "owner_id": "107203103397",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09357cc29738839b2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-062630791bd0dc2a2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "107203103397",
            "id": "rtb-0b02e1278710f93d3",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_internet_gateway.garage_flow_igw",
            "aws_vpc.garage_flow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "garage_flow_private_rta_az_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03f6d84d36399952a",
            "region": "us-east-2",
            "route_table_id": "rtb-0c6f517d9c122508c",
            "subnet_id": "subnet-02ac82d69532188e0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "107203103397",
            "id": "rtbassoc-03f6d84d36399952a",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_eip.garage_flow_nat_eip",
            "aws_internet_gateway.garage_flow_igw",
            "aws_nat_gateway.garage_flow_nat",
            "aws_route_table.garage_flow_private_rt",
            "aws_subnet.garage_flow_private_subnet_az_a",
            "aws_subnet.garage_flow_subnet_az_a",
            "aws_vpc.garage_flow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "garage_flow_private_rta_az_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ab8db54be45c61a",
            "region": "us-east-2",
            "route_table_id": "rtb-0c6f517d9c122508c",
            "subnet_id": "subnet-069d1494757934417"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "107203103397",
            "id": "rtbassoc-04ab8db54be45c61a",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_eip.garage_flow_nat_eip",
            "aws_internet_gateway.garage_flow_igw",
            "aws_nat_gateway.garage_flow_nat",
            "aws_route_table.garage_flow_private_rt",
            "aws_subnet.garage_flow_private_subnet_az_b",
            "aws_subnet.garage_flow_subnet_az_a",
            "aws_vpc.garage_flow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "garage_flow_rta_az_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef40a40fe8ede6b7",
            "region": "us-east-2",
            "route_table_id": "rtb-0b02e1278710f93d3",
            "subnet_id": "subnet-01f61ae94d2406fa4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "107203103397",
            "id": "rtbassoc-0ef40a40fe8ede6b7",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_internet_gateway.garage_flow_igw",
            "aws_route_table.garage_flow_rt",
            "aws_subnet.garage_flow_subnet_az_a",
            "aws_vpc.garage_flow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "garage_flow_rta_az_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a99e07265b169103",
            "region": "us-east-2",
            "route_table_id": "rtb-0b02e1278710f93d3",
            "subnet_id": "subnet-0ef47f81cb453b006"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "107203103397",
            "id": "rtbassoc-0a99e07265b169103",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_internet_gateway.garage_flow_igw",
            "aws_route_table.garage_flow_rt",
            "aws_subnet.garage_flow_subnet_az_b",
            "aws_vpc.garage_flow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:107203103397:security-group/sg-0fe23b9a0b2516460",
            "description": "Security group for the EKS LoadBalancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fe23b9a0b2516460",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "garage-flow-elb-sg",
            "name_prefix": "",
            "owner_id": "107203103397",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "garage-flow-elb-sg"
            },
            "tags_all": {
              "Name": "garage-flow-elb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-062630791bd0dc2a2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "107203103397",
            "id": "sg-0fe23b9a0b2516460",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.garage_flow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sql_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:107203103397:security-group/sg-003fb58d84bcbadae",
            "description": "Public security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-003fb58d84bcbadae",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 1433,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1433
              }
            ],
            "name": "garage-flow-sg",
            "name_prefix": "",
            "owner_id": "107203103397",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b2a743962714067d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "107203103397",
            "id": "sg-003fb58d84bcbadae",
            "region": "us-east-2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "garage_flow_private_subnet_az_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:107203103397:subnet/subnet-02ac82d69532188e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02ac82d69532188e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "107203103397",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "kubernetes.io/cluster/garage_flow_eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "kubernetes.io/cluster/garage_flow_eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-062630791bd0dc2a2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "107203103397",
            "id": "subnet-02ac82d69532188e0",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.garage_flow_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "garage_flow_private_subnet_az_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:107203103397:subnet/subnet-069d1494757934417",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-069d1494757934417",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "107203103397",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "kubernetes.io/cluster/garage_flow_eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "kubernetes.io/cluster/garage_flow_eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-062630791bd0dc2a2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "107203103397",
            "id": "subnet-069d1494757934417",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.garage_flow_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "garage_flow_subnet_az_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:107203103397:subnet/subnet-01f61ae94d2406fa4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f61ae94d2406fa4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "107203103397",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "kubernetes.io/cluster/garage_flow_eks": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "kubernetes.io/cluster/garage_flow_eks": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-062630791bd0dc2a2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "107203103397",
            "id": "subnet-01f61ae94d2406fa4",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.garage_flow_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "garage_flow_subnet_az_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:107203103397:subnet/subnet-0ef47f81cb453b006",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef47f81cb453b006",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "107203103397",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "kubernetes.io/cluster/garage_flow_eks": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "kubernetes.io/cluster/garage_flow_eks": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-062630791bd0dc2a2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "107203103397",
            "id": "subnet-0ef47f81cb453b006",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.garage_flow_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "garage_flow_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:107203103397:vpc/vpc-062630791bd0dc2a2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b24e3565e8dd4588",
            "default_route_table_id": "rtb-0d996865c05d6ec13",
            "default_security_group_id": "sg-0ab36ceca10c5fab7",
            "dhcp_options_id": "dopt-063d8dc535f3c471d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-062630791bd0dc2a2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d996865c05d6ec13",
            "owner_id": "107203103397",
            "region": "us-east-2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "107203103397",
            "id": "vpc-062630791bd0dc2a2",
            "region": "us-east-2"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "nodes_nodeport_from_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:107203103397:security-group-rule/sgr-090c73ef3b27f04be",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow ELB to reach nodes on NodePort range",
            "from_port": 30000,
            "id": "sgr-090c73ef3b27f04be",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0fe23b9a0b2516460",
            "region": "us-east-2",
            "security_group_id": "sg-0cb875c466159c241",
            "security_group_rule_id": "sgr-090c73ef3b27f04be",
            "tags": null,
            "tags_all": {},
            "to_port": 32767
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "107203103397",
            "id": "sgr-090c73ef3b27f04be",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_security_group.elb_sg",
            "aws_vpc.garage_flow_vpc",
            "module.eks.aws_security_group.node"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:107203103397:security-group/sg-06ec8d8336f067af1",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-06ec8d8336f067af1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cb875c466159c241"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "garage_flow_eks-cluster-bc696a876d343643766f4dfb79",
            "name_prefix": "garage_flow_eks-cluster-",
            "owner_id": "107203103397",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Prod",
              "Name": "garage_flow_eks-cluster",
              "Tenant": "fiap",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "garage_flow_eks-cluster",
              "Tenant": "fiap",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-062630791bd0dc2a2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "107203103397",
            "id": "sg-06ec8d8336f067af1",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.garage_flow_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:107203103397:security-group/sg-0cb875c466159c241",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cb875c466159c241",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow ELB to reach nodes on NodePort range",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fe23b9a0b2516460"
                ],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 10251/tcp webhook",
                "from_port": 10251,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06ec8d8336f067af1"
                ],
                "self": false,
                "to_port": 10251
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06ec8d8336f067af1"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06ec8d8336f067af1"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06ec8d8336f067af1"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06ec8d8336f067af1"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06ec8d8336f067af1"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06ec8d8336f067af1"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "garage_flow_eks-node-8dc1bfce3a9049b08a4b439b59",
            "name_prefix": "garage_flow_eks-node-",
            "owner_id": "107203103397",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Prod",
              "Name": "garage_flow_eks-node",
              "Tenant": "fiap",
              "Terraform": "true",
              "kubernetes.io/cluster/garage_flow_eks": "owned"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "garage_flow_eks-node",
              "Tenant": "fiap",
              "Terraform": "true",
              "kubernetes.io/cluster/garage_flow_eks": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-062630791bd0dc2a2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "107203103397",
            "id": "sg-0cb875c466159c241",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.garage_flow_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1908090309",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-2",
            "security_group_id": "sg-06ec8d8336f067af1",
            "security_group_rule_id": "sgr-0d65c506a85644862",
            "self": false,
            "source_security_group_id": "sg-0cb875c466159c241",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.garage_flow_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-3672502182",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "us-east-2",
            "security_group_id": "sg-0cb875c466159c241",
            "security_group_rule_id": "sgr-09e4a6b931572e826",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.garage_flow_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_10251_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 10251/tcp webhook",
            "from_port": 10251,
            "id": "sgrule-3853749769",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-2",
            "security_group_id": "sg-0cb875c466159c241",
            "security_group_rule_id": "sgr-0caf3872c433400ca",
            "self": false,
            "source_security_group_id": "sg-06ec8d8336f067af1",
            "timeouts": null,
            "to_port": 10251,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.garage_flow_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2487468750",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-2",
            "security_group_id": "sg-0cb875c466159c241",
            "security_group_rule_id": "sgr-0adaf4f236e17ae09",
            "self": false,
            "source_security_group_id": "sg-06ec8d8336f067af1",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.garage_flow_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3546949057",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-2",
            "security_group_id": "sg-0cb875c466159c241",
            "security_group_rule_id": "sgr-02d4c34ab99d2b4d8",
            "self": false,
            "source_security_group_id": "sg-06ec8d8336f067af1",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.garage_flow_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-438846039",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-2",
            "security_group_id": "sg-0cb875c466159c241",
            "security_group_rule_id": "sgr-06eb2a445cdfb918d",
            "self": false,
            "source_security_group_id": "sg-06ec8d8336f067af1",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.garage_flow_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-158629494",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-2",
            "security_group_id": "sg-0cb875c466159c241",
            "security_group_rule_id": "sgr-0d325b42f7d2ed29e",
            "self": false,
            "source_security_group_id": "sg-06ec8d8336f067af1",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.garage_flow_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-1842695613",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-2",
            "security_group_id": "sg-0cb875c466159c241",
            "security_group_rule_id": "sgr-01edee513ad9a9bfe",
            "self": false,
            "source_security_group_id": "sg-06ec8d8336f067af1",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.garage_flow_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3522879090",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-2",
            "security_group_id": "sg-0cb875c466159c241",
            "security_group_rule_id": "sgr-035f565420fa87b9c",
            "self": false,
            "source_security_group_id": "sg-06ec8d8336f067af1",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.garage_flow_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-513431093",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-2",
            "security_group_id": "sg-0cb875c466159c241",
            "security_group_rule_id": "sgr-04edb1125704bab5b",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.garage_flow_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2807668288",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-2",
            "security_group_id": "sg-0cb875c466159c241",
            "security_group_rule_id": "sgr-0c9237d41c0ba78cc",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.garage_flow_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-50740655",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "region": "us-east-2",
            "security_group_id": "sg-0cb875c466159c241",
            "security_group_rule_id": "sgr-0ddaa915d54c1600f",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.garage_flow_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}